kotlinx-benchmark-core/kotlinx-benchmark-plugin/src/test/resources/templates/invalid-target/js-browser/build.gradle
kotlin {
    js(IR) {
        browser()
    }
}

benchmark {
    targets {
        register("js")
    }
}